--- a/src/components/Dashboard/shared.module.scss
+++ b/src/components/Dashboard/shared.module.scss
@@ -1,5 +1,5 @@
 .bg {
-  // min-height: calc(100vh - 14.25rem);
+  min-height: calc(50rem);
   margin-bottom: 1.5rem;
   background-color: #e8f4ff;
   padding: 1rem;
